<resources>

    <!-- UI STRINGS -->
    <string name="app_name">Rock Paper Scissors</string>
    <string name="initial_score_text">Score: 0</string>
    <string name="score">Score: %d</string>
    <string name="settings">Settings</string>
    <string name="enable_vibrations">Enable vibrations</string>
    <string name="save_exit"><![CDATA[Save & Exit]]></string>
    <string name="enable_animations">Enable animations in shapes and buttons</string>
    <string name="enable_score_animations">Enable animations for score</string>
</resources>