<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/main"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:textSize="50sp"
        android:fontFamily="@font/cantarell_bold"
        android:text="@string/settings"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/enable_vibrations_cb"
                android:fontFamily="@font/cantarell_bold"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:text="@string/enable_vibrations"
                android:layout_width="match_parent"
                android:layout_height="70dp" />

            <CheckBox
                android:id="@+id/enable_animations_cb"
                android:fontFamily="@font/cantarell_bold"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:text="@string/enable_animations"
                android:layout_width="match_parent"
                android:layout_height="70dp" />

            <CheckBox
                android:id="@+id/enable_score_animations_cb"
                android:fontFamily="@font/cantarell_bold"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:text="@string/enable_score_animations"
                android:layout_width="match_parent"
                android:layout_height="70dp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/exit_btn"
        android:text="@string/save_exit"
        android:fontFamily="@font/cantarell_bold"
        android:background="@color/foreground"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

</LinearLayout>